2014-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (dir_entry_of_infodir): Don't free a node too 
	early.

2014-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Look up pressed keys in 
	info_keymap and echo_area_keymap.  Do not hard-code any keys for 
	particular commands.

2014-11-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (ask_for_search_string): Return 1 for empty 
	input, and 0 only when it was aborted.
	(info_search_case_sensitively, info_search)
	(info_search_backward): Set last_search_direction and 
	last_search_case sensitive in info_search_1.  Call 
	ask_for_search_string in info_search_1.  Perform search if 
	default search string was accepted.

2014-11-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert) <@quotation with
	@author>: Check if @smallquotation was used as well.  Report
	from Mahlon Smith.

2014-11-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\footnote): do not set \indent and \noindent
	to their \ptex... versions; these become global settings, and seem
	unnecessary since the only time we redefine \indent and \noindent
	is with @firstparagraphindent for section headings, and footnotes
	cannot work in headings anyway.  What am I missing?  Could not
	construct an example where it mattered.
	(\errfootnoteheading): new macro, for \chapmacro and \sectionheading.
	(\errfootnotenest): rename from \errfootnote.
	* doc/texinfo.texi (Footnotes): mention that they cannot be nested
	and cannot appear in section headings.

2014-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.h (KEYMAP_ENTRY) <function>: Replace with a union 
	to avoid casts on accessing it as a Keymap.  All uses updated.

2014-11-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (ea_delete, ea_transpose_chars): Handle 
	multi-byte characters.
	(ea_swap_chars, ea_remove_text): New static functions.

	(read_and_dispatch_in_echo_area)